--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
         <h1>Firecasting Mapper</h1>
         <label for="datepicker">Select Dates:</label>
         <input type="text" id="datepicker">
-        <button id="load_swe_to_map" >Load Wildfire Prediciton to Map</button>
-        <button id="download_swe_geotiff" >Download Wildfire Prediciton (GeoTiff)</button>
+        <button id="load_wildfire_to_map" >Load Wildfire Prediciton to Map</button>
+        <button id="download_wildfire_geotiff" >Download Wildfire Prediciton (GeoTiff)</button>
     </div>
     <div id="map"></div>
     <!--<div id="map-controls"></div>-->
