--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         .legend {
             line-height: 18px;
             color: #555;
+            background-color: aliceblue;
         }
         .legend i {
             width: 18px;
