--- a/index.html
+++ b/index.html
@@ -54,8 +54,10 @@
 <body>
     <div id="content">
         <h1>Firecasting Mapper</h1>
-        <label for="datepicker">Select Dates:</label>
-        <input type="text" id="datepicker">
+        <label for="datepicker1">Select Eye Date:</label>
+        <input type="text" id="datepicker1">
+        <label for="datepicker2">Select Prediction Date:</label>
+        <input type="text" id="datepicker2">
         <button id="load_wildfire_to_map" >Load Wildfire Prediciton to Map</button>
         <button id="download_wildfire_geotiff" >Download Wildfire Prediciton (GeoTiff)</button>
     </div>
