fix the date picker

--- a/index.html
+++ b/index.html
@@ -128,7 +128,13 @@
     <div id="content">
         <h1>Firecasting Mapper</h1>
         <div class="toolbar">
-            <label for="datepicker1">Select Eye Date:</label>
+            <label for="folderpicker">Select Folder:</label>
+            <select id="folderpicker" style="max-width: 150px;">
+                <option value="" disabled selected>Choose a folder</option>
+            </select>
+        </div>
+        <div class="toolbar">
+            <label for="datepicker1">Select Base Date:</label>
             <input type="text" id="datepicker1" autocomplete="off" autocorrect="off" spellcheck="false">
         </div>
         <div class="toolbar">
