fixed the word-wrap of feature-info

--- a/index.html
+++ b/index.html
@@ -122,6 +122,10 @@
             background-color: white !important;
             box-shadow: 0 0 0 1000px white inset !important;
         }
+        .leaflet-popup-content {
+            white-space: normal;
+            word-wrap: break-word;
+        }
     </style>
 </head>
 <body>
